Start rebuilding with pure Akka