@@ -16,10 +16,10 @@ ThisBuild / scmInfo := Some(ScmInfo(url("https://github.com/SpongePowered/System
   "scm:git@github.com:spongepowered/systemofadownload.git"))
 ThisBuild / developers := List(
   Developer(
-    id    = "gabizou",
-    name  = "Gabriel Harris-Rouquette",
+    id = "gabizou",
+    name = "Gabriel Harris-Rouquette",
     email = "gabizou@spongepowered.org",
-    url   = url("https://github.com/gabizou")
+    url = url("https://github.com/gabizou")
   )
 )
 ThisBuild / description := "A Web Application for indexing and cataloging Artifacts in Maven Repositories"
@@ -127,6 +127,9 @@ lazy val jacksonGuava = "com.fasterxml.jackson.datatype" % "jackson-datatype-gua
 lazy val jacksonPcollections = "com.fasterxml.jackson.datatype" % "jackson-datatype-pcollections" % "2.14.0"
 // endregion
 
+lazy val akkaHttp = "com.typesafe.akka" %% "akka-http" % LagomVersion.akkaHttp
+lazy val akkaJackson = "com.typesafe.akka" %% "akka-http-jackson" % LagomVersion.akkaHttp
+
 lazy val akkaStreamTyped = "com.typesafe.akka" %% "akka-stream-typed" % LagomVersion.akka
 lazy val akkaPersistenceTestkit = "com.typesafe.akka" %% "akka-persistence-testkit" % LagomVersion.akka % Test
 lazy val akkaKubernetesDiscovery = "com.lightbend.akka.discovery" %% "akka-discovery-kubernetes-api" % "1.1.3"
@@ -142,6 +145,12 @@ lazy val guice = "com.google.inject" % "guice" % "5.1.0"
 lazy val jgit = "org.eclipse.jgit" % "org.eclipse.jgit" % "6.1.0.202203080745-r"
 lazy val jgit_jsch = "org.eclipse.jgit" % "org.eclipse.jgit.ssh.jsch" % "6.1.0.202203080745-r"
 
+lazy val mavenArtifact = "org.apache.maven" % "maven-artifact" % "3.8.5"
+
+lazy val testContainers = "org.testcontainers" % "testcontainers" % "1.17.3" % Test
+lazy val testContainersJunit = "org.testcontainers" % "junit-jupiter" % "1.17.3" % Test
+lazy val testContainersPostgres = "org.testcontainers" % "postgresql" % "1.17.3" % Test
+
 // endregion
 
 // region - project blueprints
@@ -149,7 +158,7 @@ lazy val jgit_jsch = "org.eclipse.jgit" % "org.eclipse.jgit.ssh.jsch" % "6.1.0.2
 def soadProject(name: String) =
   Project(name, file(name)).settings(
     moduleName := s"systemofadownload-$name",
-    Compile / javacOptions := Seq("--release", "17", "-parameters", "-encoding", "UTF-8"), //Override the settings Lagom sets
+    Compile / javacOptions := Seq("--release", "17", "--enable-preview", "-parameters", "-encoding", "UTF-8"), //Override the settings Lagom sets
     artifactName := { (_: ScalaVersion, module: ModuleID, artifact: Artifact) =>
       s"${artifact.name}-${module.revision}.${artifact.extension}"
     },
@@ -308,6 +317,50 @@ lazy val `artifact-query-api` = apiSoadProject("artifact-query-api").dependsOn(
 lazy val `artifact-query-impl` = implSoadProjectWithPersistence("artifact-query-impl", `artifact-query-api`).settings(
   libraryDependencies += playFilterHelpers
 )
+lazy val `downloads-api` = soadProject("downloads-api").enablePlugins(DockerPlugin)
+        .settings(
+          libraryDependencies ++= Seq(
+            // App
+            mavenArtifact,
+
+            // Akka
+            akkaHttp,
+            akkaStreamTyped,
+            akkaKubernetesDiscovery,
+
+            // Jackson serialization
+            akkaJackson,
+            jacksonDataBind,
+            jacksonDataTypeJsr310,
+            jacksonDataformatCbor,
+            jacksonDatatypeJdk8,
+            jacksonParameterNames,
+            jacksonParanamer,
+            jacksonScala,
+            //Language Features
+            vavr,
+            // Persistence
+            hibernate,
+            postgres,
+            // Testing
+            akkaPersistenceTestkit,
+            junit,
+            jupiterInterface
+          ),
+          dockerUpdateLatest := true,
+          dockerBaseImage := "eclipse-temurin:17.0.3_7-jre",
+          dockerChmodType := DockerChmodType.UserGroupWriteExecute,
+          dockerExposedPorts := Seq(9000, 8558, 2552),
+          //  dockerLabels ++= Map(
+          //    "author" -> "spongepowered"
+          //  ),
+          Docker / maintainer := "spongepowered",
+          Docker / packageName := s"systemofadownload-$name",
+          dockerUsername := Some("spongepowered"),
+          Universal / javaOptions ++= Seq(
+            "-Dpidfile.path=/dev/null"
+          )
+        )
 
 lazy val `versions-api` = apiSoadProject("versions-api").dependsOn(
   //Module Dependencies
